--- a/Vocatis-Vorlage/printer/vorlage/Printer.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/Printer.cshtml
@@ -31,21 +31,21 @@
 
     @* wait popup is shown, while generating a new number *@
     <section id="waitPopup" style="display: none;">
-      <p>Ihre Wartemarke wird gedruckt</p>
+      <h4>Ihre Wartemarke wird gedruckt</h4>
       <div>
-        <img src="sanduhr.png" alt="wait" />
+        <img src="wait.gif" id="wait" alt="wait" />
       </div>
-      <p>Bitte entnehmen Sie ihre Wartenummer</p>
+      <h6>Bitte entnehmen Sie ihre Wartenummer</h6>
       <img src="PfeilUnten.png" />
     </section>
 
     @* take popup is shown, when the printout is ready *@
     <section id="takePopup" style="display: none;">
-       <p>Ihre Wartemarke wird gedruckt</p>
+       <h4>Ihre Wartemarke wird gedruckt</h4>
       <div>
-        <img src="sanduhr.png" alt="wait" />
+        <img src="wait.gif" id="wait" alt="wait" />
       </div>
-      <p>Bitte entnehmen Sie ihre Wartenummer</p>
+      <h6>Bitte entnehmen Sie ihre Wartenummer</h6>
       <img src="PfeilUnten.png" />
     </section>
 
