--- a/Vocatis-Vorlage/printer/vorlage/QueueList.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/QueueList.cshtml
@@ -56,7 +56,7 @@
         <div class="single-button" >
           <span>
             <img src="single-button.gif" /><br>
-            Bitte drücken
+            <p>Bitte drücken!</p>
           </span>
         </div>
       </div>
