Layout Änderung ticket
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/Vocatis-Vorlage/printer/styles/style.scss
+++ b/Vocatis-Vorlage/printer/styles/style.scss
@@ -6,7 +6,7 @@
 
 html
 {
-    font-family:Arial, Helvetica, Tahoma,sans-serif;
+    font-family:Arial, Verdana, Geneva,Tahoma,sans-serif;
     color: $color-common-foreground;
     background-color: $color-common-background;
 }
