--- a/Vocatis-Vorlage/printer/styles/ticket.scss
+++ b/Vocatis-Vorlage/printer/styles/ticket.scss
@@ -15,52 +15,43 @@
     body>*:not(.print_ticket) { display: none !important; } 
 }
 
-.ticket
-{
+    section.ticket
+    {   display: block;
+        margin: 5vh 5vw;
+        max-height: 100vh;
+        background-color:$color-highlight-foreground;
+        p
+        {
+            font-size: 18px;
+            text-align: center;
+        }
+      
     
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    max-width: 100mm;
-
-
-    font-weight: bold;
-    font-size: x-large;
-    height:70px;
-    line-height:300%;
-    color:#676767;
-
-
-    header
-    {
-        font-size: 1em;
-        text-align: center; 
-        margin: 20px 0px 20px 0px; 
+        h1
+        {
+            text-align: center;
+            font-size: 80px;
+        }
+        .separation
+        {
+            width: 90%;
+            padding: 3mm;
+        }
+        h4
+        {
+            font-size: 1em;
+            font-weight:regular;
+        }
+        .qrcode
+        {
+            height: 25mm;
+            padding: 5mm;
+            float: left;
+        }
+        img.customerlogo
+        {
+            height: 25mm;
+            float: right;
+            padding: 5mm;
+        }
     }
-
-    img
-    {
-        text-align: center;
-        width: 80%; 
-    }
-
-    h1
-    {
-        font-size: 6em;
-        font-weight:bold;
-        text-align: center;
-        text-transform: uppercase;
-        margin: 20px 0px 0px 20px; 
-        padding: 0;
-        color: rgb(24, 207, 24);
-    }
-
-    footer
-    {
-        font-size: 1em;
-        text-align: center;
-        line-height:1.5em;
-        margin: 1em 25px 30px 25px;
-    }
-}
