--- a/Vocatis-Vorlage/printer/vorlage/PrinterTicket.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/PrinterTicket.cshtml
@@ -13,20 +13,20 @@
 }
 
  @Scripts.Render("~/Scripts/jquery", "js/jquery.qrcode.js")
-<section class="ticket">
+<section class="ticket" style="width:100mm;">
     <header>
-       @DateTime.Now.ToString("dd.MM.yyyy  HH:mm") Uhr 
+      <p> @DateTime.Now.ToString("dd.MM.yyyy  HH:mm") Uhr </p>
     </header>
-    <img src="Logo.png" alt="Ersatztext">
     <h1>
         @ticket.Number
     </h1>
+    <img src="separation.png" calss="separation" alt="Trennung">
     <section class="qrcode">
+        <h4>Bitte QR Code einlesen!</h4>
         <a href="@Href("App.cshtml", new {id=ticket.Id})"></a>
+        <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
     </section>
-    <svg xmlns="http://www.w3.org/2000/svg"><g><path d="M 0.0,0.0 65.0,0.0 67.5,5.0 70.0,0.0 100.0,0.0" /></g></svg>
     <footer>
-        Bitte warten Sie, bis Ihre Nummer auf dem Bildschirm erscheint!
     </footer>
 </section>
 <script type="text/javascript">
