--- a/Vocatis-Vorlage/printer/vorlage/TicketDefault.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/TicketDefault.cshtml
@@ -11,12 +11,12 @@
 
 <body class="ticket">
     <header>
-       @DateTime.Now.ToString("dd.MM.yyyy - HH:mm") Uhr 
+        <p>@DateTime.Now.ToString("dd.MM.yyyy - - - - HH:mm") Uhr</p>
     </header>
-    <img src="Logo.png" alt="Logo">
     <h1>
         @Model.Style["ticketnumber"].Value
     </h1>
+    <img src="customerlogo.png" class="customerlogo" alt="Logo">
     <footer>
         Bitte warten Sie, bis Ihre Nummer auf dem Bildschirm erscheint! <br /><br /><br />
     </footer>
