--- a/Vocatis-Vorlage/printer/vorlage/TicketDefault.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/TicketDefault.cshtml
@@ -11,7 +11,7 @@
 
 <body class="ticket">
     <header>
-        <p>@DateTime.Now.ToString("dd.MM.yyyy - - - - HH:mm") Uhr</p>
+        <p>@DateTime.Now.ToString("dd.MM.yyyy &emsp;&emsp; HH:mm") Uhr</p>
     </header>
     <h1>
         @Model.Style["ticketnumber"].Value
