--- a/Vocatis-Vorlage/printer/vorlage/QueueList.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/QueueList.cshtml
@@ -17,7 +17,7 @@
                      select i).Count();
 }
 <section id="idle">
-  <h4>Bitte wählen Sie den gewünschten Fachbereich aus:</h4>
+  @if (buttonCount > 1) { <h4>Bitte wählen Sie den gewünschten Fachbereich aus:</h4> }
   <ul class="buttons-@buttonCount">
     @for (int i = 1; i <= 6; i++) {
       if (!String.IsNullOrEmpty((string)Model.Style["text" + i].Value)) {
