Zeit in Warteliste anzeigen

--- a/Vocatis-Vorlage/printer/vorlage/QueueList.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/QueueList.cshtml
@@ -36,7 +36,7 @@
           <span>
             @if (status.QueueLength > 3)
             {
-              <text>Voraussichtliche Wartezeit ca. X Minuten</text>
+              <text>Voraussichtliche Wartezeit ca. @((int)status.CurrentMaxWaitingTime.TotalMinutes) Minuten</text>
             }
             else
             {
