--- a/Vocatis-Vorlage/printer/vorlage/App.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/App.cshtml
@@ -1,10 +1,4 @@
-@using iSign
-@using Stolltec.Vocatis.Model
-@{
-    dynamic id = CommonGuidId.FromString(Request["id"]);
-    var ticket = Vocatis.GetTicket(id);
-    var status = Vocatis.GetTicketStatus(id);
-}
+@using System.Web.Optimization
 <!doctype html>
 <html>
 <head>
@@ -25,31 +19,40 @@
   <img src="about:blank" />
 </section>
 
-<section class="main">
-
-  <h2>Warteschlange</h2>
-  <article>
-   <p>Es befinden sich noch <span style="font-weight: bold">10 Kunden</span> vor Ihnen in der Warteschlange.</p>
-   Ihre <span style="font-weight: bold">voraussichtliche</span> Wartezeit betr&auml;gt <span style="font-weight: bold">ca. 50 Minuten</span>.
-   <p id="three">STAND: 13:50 Uhr</p>
-   </article>  
-
-<div class="posinfo"></div>
-<div class="notch"><svg xmlns="http://www.w3.org/2000/svg"><g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g></svg></div>
-<div class="number">
-<h3>Ihre Wartemarke:</h3>
-  <h4>@ticket.Number</h4>
-  </div>
-  <h5>Bitte rechtzeitig Wartebereich aufsuchen!</h5>
-</section>
-
-<!--
-Position: @status.Position
-Wartezeit: @status.EstimatedTimeOfCall
--->
+<div id="content" data-content-src="@Href("AppContent.cshtml", new {id=Request["id"]})">
+  Laden ...
+</div>
+<div id="error" style="display: none;">
+  Fehler aufgetreten.
+</div>
 
 <footer>
-  Footer
 </footer>
+
+@Scripts.Render("~/Scripts/jquery")
+<script type="text/javascript">
+  $(document).ready(function() {
+    @* update queue list periodically *@
+    var contentDiv = $("#content");
+    var errorDiv = $("#error");
+    var url = contentDiv.data("content-src");
+    var update = function () {
+      $.ajax({
+        url: url,
+        cache: false
+      }).done(function (result) {
+        contentDiv.html(result);
+        contentDiv.show();
+        errorDiv.hide();
+      }).fail(function (result) {
+        contentDiv.hide();
+        errorDiv.show();
+      }).always(function() {
+        window.setTimeout(update, 60000);
+      });
+    };
+    window.setTimeout(update, 0);
+  });
+</script>
 </body>
 </html>
