--- a/Vocatis-Vorlage/printer/styles/printer.scss
+++ b/Vocatis-Vorlage/printer/styles/printer.scss
@@ -61,7 +61,7 @@ body.printer
 
             .single-button
             {
-                display: none;
+                display: block;
                 line-height: 2vh;
                 
                 img
@@ -78,7 +78,7 @@ body.printer
                 }
                 .single-button
                 {
-                    display: initial;
+                    display: block;
                 }
             }
             .btn.next-one>div:last-child div:nth-child(2) svg
