--- a/Vocatis-Vorlage/printer/vorlage/PrinterTicket.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/PrinterTicket.cshtml
@@ -13,7 +13,10 @@ var ticket = Vocatis.CreateTicket(queueid, catids);
 @Scripts.Render("js/jquery.qrcode.js")
 <section class="ticket">
   <header>
-    <p> @DateTime.Now.ToString("dd.MM.yyyy  HH:mm") Uhr </p>
+    <p>
+      @DateTime.Now.ToString("dd.MM.yyyy")<br>
+      @DateTime.Now.ToString("HH:mm") Uhr
+    </p>
   </header>
   <h1>
     @ticket.Number
