single-button richtig
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/Vocatis-Vorlage/printer/styles/printer.scss
+++ b/Vocatis-Vorlage/printer/styles/printer.scss
@@ -61,7 +61,7 @@ body.printer
 
             .single-button
             {
-                display: block;
+                display: none;
                 line-height: 2vh;
                 
                 img
