--- a/Vocatis-Vorlage/printer/vorlage/AppContent.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/AppContent.cshtml
@@ -5,13 +5,20 @@
     var ticket = Vocatis.GetTicket(id);
     var status = Vocatis.GetTicketStatus(id);
 }
-
+@*
 @if (status.Position < 3) {
 <section class="main">
   <h2>Warteschlange</h2>
   <article>
-    <p>Es befinden sich noch <b>@status.Position Kunden</b> vor Ihnen in der Warteschlange.</p>
-    <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p>
+    <p>Es befinden sich noch <b>@status.Position Kunden</b> vor Ihnen in der Warteschlange.</p>     
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.7 71.2">
+            <path class="cls-1" d="M11.6,14.3A6.51,6.51,0,0,0,18.1,8h0a6.38,6.38,0,0,0-6.5-6.3A6.45,6.45,0,0,0,5.1,8a6.51,6.51,0,0,0,6.5,6.3h0" transform="translate(1)"/>
+            <path class="cls-1" d="M27,12.8a6.51,6.51,0,0,0,6.5-6.3h0a6.5,6.5,0,0,0-13,0A6.32,6.32,0,0,0,27,12.8h0" transform="translate(1)"/>
+            <path class="cls-1" d="M38.7,21.5c0-3.9-2.8-7.2-6.8-8.7h0a7.52,7.52,0,0,1-9.4,0h-.1a11.67,11.67,0,0,0-3.1,1.7,9.15,9.15,0,0,1,5.1,7.9V38.8A4.34,4.34,0,0,1,22,42.1a4.4,4.4,0,0,1-1.6.2V66.1a3.5,3.5,0,0,0,7,0V41.9h.1V66.2a3.5,3.5,0,0,0,7,0V39.9a2.6,2.6,0,0,0,1.5.4,2.64,2.64,0,0,0,2.7-2.4h0V21.5Z" transform="translate(1)"/>
+            <path class="cls-1" d="M23.3,23a9.15,9.15,0,0,0-5.1-7.9,8.86,8.86,0,0,0-1.7-.8h0a7.52,7.52,0,0,1-9.4,0H6.9C2.8,15.8,0,19.2,0,23V39.4H0a2.71,2.71,0,0,0,2.7,2.4,2.66,2.66,0,0,0,2.2-1.1v27A3.51,3.51,0,0,0,8.4,71h0a3.46,3.46,0,0,0,3.5-3.4V43.4H12V67.7a3.5,3.5,0,0,0,7,0V41.3l.3.1a2.66,2.66,0,0,0,1.2.3,2.64,2.64,0,0,0,2.7-2.4V35.2Z" transform="translate(1)"/>
+            <text class="cls-2" text-anchor="middle" transform="translate(11.2 32.55)">989</text>
+          </svg>
+    <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p> 
   </article>  
 
   <div class="posinfo"></div>
@@ -20,17 +27,26 @@
     <h3>Ihre Wartemarke:</h3>
     <h4>@ticket.Number</h4>
   </div>
-  <h5>Bitte halten Sie sich im Wartebereich auf</h5>
+  <h5>Bitte halten Sie sich im Wartebereich auf!</h5>
 </section>
+
 } else {
-<section class="main">
+
+<section class="wait01">
   <h2>Warteschlange</h2>
   <article>
     <p>Es befinden sich noch <b>@status.Position Kunden</b> vor Ihnen in der Warteschlange.</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.7 71.2">
+            <path class="cls-1" d="M11.6,14.3A6.51,6.51,0,0,0,18.1,8h0a6.38,6.38,0,0,0-6.5-6.3A6.45,6.45,0,0,0,5.1,8a6.51,6.51,0,0,0,6.5,6.3h0" transform="translate(1)"/>
+            <path class="cls-1" d="M27,12.8a6.51,6.51,0,0,0,6.5-6.3h0a6.5,6.5,0,0,0-13,0A6.32,6.32,0,0,0,27,12.8h0" transform="translate(1)"/>
+            <path class="cls-1" d="M38.7,21.5c0-3.9-2.8-7.2-6.8-8.7h0a7.52,7.52,0,0,1-9.4,0h-.1a11.67,11.67,0,0,0-3.1,1.7,9.15,9.15,0,0,1,5.1,7.9V38.8A4.34,4.34,0,0,1,22,42.1a4.4,4.4,0,0,1-1.6.2V66.1a3.5,3.5,0,0,0,7,0V41.9h.1V66.2a3.5,3.5,0,0,0,7,0V39.9a2.6,2.6,0,0,0,1.5.4,2.64,2.64,0,0,0,2.7-2.4h0V21.5Z" transform="translate(1)"/>
+            <path class="cls-1" d="M23.3,23a9.15,9.15,0,0,0-5.1-7.9,8.86,8.86,0,0,0-1.7-.8h0a7.52,7.52,0,0,1-9.4,0H6.9C2.8,15.8,0,19.2,0,23V39.4H0a2.71,2.71,0,0,0,2.7,2.4,2.66,2.66,0,0,0,2.2-1.1v27A3.51,3.51,0,0,0,8.4,71h0a3.46,3.46,0,0,0,3.5-3.4V43.4H12V67.7a3.5,3.5,0,0,0,7,0V41.3l.3.1a2.66,2.66,0,0,0,1.2.3,2.64,2.64,0,0,0,2.7-2.4V35.2Z" transform="translate(1)"/>
+            <text class="cls-2" text-anchor="middle" transform="translate(11.2 32.55)">989</text>
+      </svg>
     Ihre <b>voraussichtliche</b> Wartezeit betr&auml;gt <b>ca. @((int)status.EstimatedTimeOfCall.TotalMinutes) Minuten</b>.
+    </section>
     <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p>
   </article>  
-
   <div class="posinfo"></div>
   <div class="notch"><svg xmlns="http://www.w3.org/2000/svg"><g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g></svg></div>
   <div class="number">
@@ -40,3 +56,35 @@
   <h5>Bitte rechtzeitig Wartebereich aufsuchen!</h5>
 </section>
 }
+*@
+
+@*
+<section class="room">
+  <h2>Warteschlange</h2>
+  <article>
+    <p>Bitte begeben Sie sich in</p>    
+    <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p>     
+  </article>  
+  <div class="posinfo"></div>
+  <div class="notch"><svg xmlns="http://www.w3.org/2000/svg"><g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g></svg></div>
+  <div class="number">
+    <h3>Ihre Wartemarke:</h3>
+    <h4>@ticket.Number</h4>
+  </div>
+  <h5>Bitte halten Sie sich im Wartebereich auf!</h5>
+</section>
+*@
+
+
+<section class="danke">
+  <h2>Auftrag abgeslossen</h2>
+  <article>
+    <p>Danke f&uuml;r den Besuch</p>  
+    <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p>    
+  </article>  
+  <div class="posinfo"></div>
+  <div class="notch"><svg xmlns="http://www.w3.org/2000/svg"><g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g></svg></div>
+  <div class="number">
+    <h4>Wir w&uuml;nschen Ihnen einen angenehmen Tag!</h4>
+  </div>
+</section>
