--- a/Vocatis-Vorlage/printer/vorlage/App.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/App.cshtml
@@ -25,6 +25,7 @@
 <div id="error" style="display: block;">
  <h2>Fehler aufgetreten!</h2>
  <p>Bitte begeben Sie sich in den Wartebereich!</p>
+ <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p> 
 </div>
 
 <footer>
