--- a/Vocatis-Vorlage/printer/styles/app.scss
+++ b/Vocatis-Vorlage/printer/styles/app.scss
@@ -76,6 +76,14 @@ section.logo
         font-size: 0.75rem;
         padding: 3vh 2vw; 
     }
+
+    #three
+    {
+        text-align: center;
+        font-size: 0.5rem;
+        font-weight: bold;
+        padding: 5vh 2vw; 
+    }
    
 }
 section.room
