--- a/Vocatis-Vorlage/printer/styles/ticket.scss
+++ b/Vocatis-Vorlage/printer/styles/ticket.scss
@@ -23,11 +23,12 @@ section.ticket
     /*background-color:$color-highlight-foreground;*/
     background-color:$color-highlight-foreground;
     
-    p
+    p 
     {
-        text-align: center;
-        font-size: 12px;
-        color: #000;
+    text-align: center;
+    font-size: 12px;
+    color: #000;
+    line-height: 15px;
     }
     
     h1
